--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ display: flex;
 flex-direction: column;
 gap: 10px;
 margin-top: 20px;
-margin-left: 30px;
 }
 
 .product-row {
@@ -42,6 +41,7 @@ margin-left: 30px;
   padding: 2px;
   border-bottom: 1px solid #ddd;
   align-items: center; 
+  margin-left: 20px
 }
 
 .product-column {
