--- a/style.css
+++ b/style.css
@@ -7,20 +7,22 @@ body {
   display: flex;
   justify-content: left; 
   align-items: center; 
+  min-width:968px;
+  overflow-x:auto;
 }
 
-#filterInput {
-  margin-left: 720px; 
+
+.header-container input{
+  margin-left:1.2vh;
 }
-#filterDate {
-  margin-left: 10px; 
-}
-#filterTime {
-  margin-left: 10px; 
+.header-inputs{
+  display:flex;
+  align-items:right;
+  justify-content:right;
+  width:100%;
 }
 #filterClear {
-  margin-left: 10px;
-  font-weight: bold;
+  margin-left:1.2vh;
 }
 #filterInput, #filterDate, #filterTime, #filterClear {
   padding: 10px;
@@ -28,27 +30,24 @@ body {
 }
 
 .product-list {
-clear: both;
-display: flex;
-flex-direction: column;
-gap: 10px;
-margin-top: 20px;
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+  min-width:968px;
+  overflow-x:auto;
 }
 
 .product-row {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(7, 0.5fr);
   justify-content: space-between; 
+  text-align:center;
   padding: 2px;
   border-bottom: 1px solid #ddd;
   align-items: center; 
   margin-left: 20px
-}
-
-.product-column {
-  flex: 1;
-  text-align: center;
-  display: flex; 
-  align-items: center; 
 }
 
 .product-header {
@@ -59,6 +58,8 @@ margin-top: 20px;
   margin-right: 0px;
 }
 
-.product-checkbox {
-  margin-right: 10px; 
+@media (max-width: 768px) {
+  .product-header{
+    font-size:small;
+  }
 }
