--- a/OilProject-FrontEnd/src/css/addPageStyles/main.css
+++ b/OilProject-FrontEnd/src/css/addPageStyles/main.css
@@ -39,6 +39,7 @@ button, select, input[type="text"], input[type="number"], input[type="file"] {
   border-radius: 5px;
   margin-bottom: 10px;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 button[type="submit"] {
