--- a/OilProject-FrontEnd/src/css/addPageStyles/main.css
+++ b/OilProject-FrontEnd/src/css/addPageStyles/main.css
@@ -7,6 +7,14 @@ body {
   margin: 0;
   background-color: #f4f4f9;
 }
+.fade {
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+}
+
+.fade.show {
+  opacity: 1;
+}
 
 .header-container {
   background: #fff;
