--- a/OilProject-FrontEnd/src/css/addPageStyles/main.css
+++ b/OilProject-FrontEnd/src/css/addPageStyles/main.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   background-color: #f4f4f9;
 }
+
 .fade {
   transition: opacity 0.5s ease-in-out;
   opacity: 0;
@@ -21,6 +22,7 @@ h1 {
 }
 
 .header-container {
+  font-family: 'Roboto', sans-serif;
   background: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -31,6 +33,7 @@ h1 {
 }
 
 .header-inputs {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,6 +41,7 @@ h1 {
 }
 
 label {
+  font-family: 'Roboto', sans-serif;
   width: 100%;
   text-align: left;
   margin-bottom: 5px;
@@ -55,6 +59,7 @@ button, select, input[type="text"], input[type="number"], input[type="file"] {
 }
 
 button[type="submit"] {
+  font-family: 'Roboto', sans-serif;
   background-color: #4CAF50;
   color: white;
   width: 100%;
